fix dark mode cta

--- a/sass/juice.scss
+++ b/sass/juice.scss
@@ -69,7 +69,7 @@ a {
     text-decoration: none;
     color: #1B0FF7;
     @media (prefers-color-scheme: dark) {
-        color: #fff;
+        color: #BFBBFF;
     }
 }
 
@@ -77,7 +77,7 @@ a:hover {
     color: #1B0FF7;
     text-decoration: none;
     @media (prefers-color-scheme: dark) {
-        color: #fff;
+        color: #BFBBFF;
     }
 }
 
